--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,45 @@
+# Node modules
+node_modules/
+
+# Next.js
+.next/
+out/
+
+# Build output
+dist/
+
+# Env files
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# MacOS
+.DS_Store
+
+# Coverage
+coverage/
+
+# Editor directories and files
+.vscode/
+*.sublime-workspace
+
+# Optional npm cache
+.npm/
+
+# TypeScript
+*.tsbuildinfo
+
+# Misc
+.idea/
+.cache/
+/.pnp.cjs
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
