--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/jsdom": "^27.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -124,8 +125,7 @@
     "tw-animate-css": "^1.3.5",
     "typescript": "^5",
     "vitest": "^4.0.4"
-  }
-  ,
+  },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
       "eslint --fix",
