--- a/package.json
+++ b/package.json
@@ -4,8 +4,17 @@
   "private": true,
   "scripts": {
     "dev": "nodemon --exec \"npx tsx server.ts\" --watch server.ts --watch src --ext ts,tsx,js,jsx 2>&1 | tee dev.log",
+    "dev:gerant": "PORT=3000 APP_ROLE=gerant npx tsx server.ts",
+    "dev:serveur": "PORT=3001 APP_ROLE=serveur npx tsx server.ts",
+    "dev:bar": "PORT=3002 APP_ROLE=bar npx tsx server.ts",
+    "dev:cuisine": "PORT=3003 APP_ROLE=cuisine npx tsx server.ts",
     "build": "next build",
     "start": "NODE_ENV=production tsx server.ts 2>&1 | tee server.log",
+    "start:gerant": "NODE_ENV=production PORT=3000 APP_ROLE=gerant node server.ts",
+    "start:serveur": "NODE_ENV=production PORT=3001 APP_ROLE=serveur node server.ts",
+    "start:bar": "NODE_ENV=production PORT=3002 APP_ROLE=bar node server.ts",
+    "start:cuisine": "NODE_ENV=production PORT=3003 APP_ROLE=cuisine node server.ts",
+    "start:all": "concurrently \"npm run start:gerant\" \"npm run start:serveur\" \"npm run start:bar\" \"npm run start:cuisine\"",
     "lint": "next lint",
     "db:push": "prisma db push",
     "db:generate": "prisma generate",
@@ -124,7 +133,8 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5",
-    "vitest": "^4.0.4"
+    "vitest": "^4.0.4",
+    "concurrently": "^8.2.2"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
