chore(tests): add Vitest config, setup, sample test; CI workflow; email notifications and mailer updates

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,24 @@ PORT=3000
 APP_ROLE=gerant
 NEXT_PUBLIC_APP_ROLE=gerant
 NEXT_PUBLIC_APP_NAME="Application Restaurant"
+
+# ===== MAILTRAP EMAIL TESTING =====
+MAILTRAP_USER=your_mailtrap_username
+MAILTRAP_PASS=your_mailtrap_password
+
+# Expéditeur par défaut pour les emails
+MAIL_FROM_ADDRESS=noreply@restaurant.local
+MAIL_FROM_NAME=Restaurant Local
+
+# === EMAILS PERSONNEL DU RESTAURANT ===
+# Email du gérant (notifications importantes)
+MANAGER_EMAIL=gerant@restaurant.local
+
+# Email du barman (commandes de boissons)
+BARTENDER_EMAIL=barman@restaurant.local
+
+# Email des serveurs (service de table)
+WAITER_EMAIL=serveur@restaurant.local
+
+# Email de la cuisine (préparation des plats)
+KITCHEN_EMAIL=cuisine@restaurant.local
