--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "next-auth": "^4.24.11",
     "next-intl": "^4.3.4",
     "next-themes": "^0.4.6",
+    "nodemailer": "^6.10.1",
     "pino": "^10.1.0",
     "prisma": "^6.11.1",
     "react": "^19.0.0",
@@ -110,9 +111,13 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/jsdom": "^27.0.0",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.46.2",
+    "@vitest/coverage-v8": "^4.0.4",
+    "@vitest/ui": "^4.0.4",
+    "concurrently": "^8.2.2",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
     "eslint-config-prettier": "^10.1.8",
@@ -133,8 +138,7 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5",
-    "vitest": "^4.0.4",
-    "concurrently": "^8.2.2"
+    "vitest": "^4.0.4"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
