--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^5.1.1",
-    "@mdxeditor/editor": "^3.39.1",
     "@prisma/client": "^6.11.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -60,7 +59,6 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@reactuses/core": "^6.0.5",
     "@sentry/nextjs": "^10.22.0",
     "@tanstack/react-query": "^5.82.0",
     "@tanstack/react-table": "^8.21.3",
@@ -97,7 +95,6 @@
     "tsx": "^4.20.3",
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
-    "z-ai-web-dev-sdk": "^0.0.10",
     "zod": "^4.0.2",
     "zustand": "^5.0.6"
   },
@@ -105,7 +102,7 @@
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.16",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
@@ -117,6 +114,7 @@
     "@typescript-eslint/eslint-plugin": "^8.46.2",
     "@vitest/coverage-v8": "^4.0.4",
     "@vitest/ui": "^4.0.4",
+    "autoprefixer": "^10.4.21",
     "concurrently": "^8.2.2",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
@@ -133,6 +131,7 @@
     "msw": "^2.11.6",
     "nodemon": "^3.1.10",
     "playwright": "^1.56.1",
+    "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "supertest": "^7.1.4",
     "tailwindcss": "^4",
