--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,29 @@
 name: CI
+on: [push, pull_request]
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: pnpm/action-setup@v2
+        with:
+          version: 18
+
+      - name: Install dependencies
+        run: pnpm install
+
+      - name: Build
+        run: pnpm build
+
+      - name: Run tests
+        run: pnpm exec vitest run --reporter verbose
+
+      - name: Typecheck
+        run: pnpm exec tsc --noEmit
+name: CI
 
 on:
   push:
