--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "test": "vitest",
     "test:ci": "vitest --run",
     "format": "prettier --write .",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test:api": "bash scripts/test-api.sh"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
